# ExpressPrint

./: README.md  pyproject.toml  requirements.txt
configs/finetuning/: ecommerce_cosine.yaml
configs/watermarking/: expressprint_clip.yaml
demo/: ExpressPrint_demo.ipynb
expressprint/: .gitignore
expressprint/datasets/: __init__.py  dataset_pattern.py  imagenet.py  wm_dataset.py
expressprint/experiments/classification/: __init__.py  dataset.py  model.py  run.py  trainer.py
expressprint/methods/: __init__.py  expressprint.py  fingerprinting.py  massive_activations.py  watermarking.py
expressprint/models/: __init__.py  create_model.py  model_pattern.py  wm_models.py
expressprint/models/vfms/: __init__.py  clip.py  dinov2.py
expressprint/runners/: embed_watermark.py  find_expressive_block.py
expressprint/trainers/: __init__.py  wm_trainer.py
expressprint/utils/: __init__.py  config.py  log.py  lr_scheduler.py  metrics.py  modify_vit.py  plot.py  prepare_images.py
tests/: run_tests.sh  test_datasets.py  test_wm_models.py
