[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expressprint"
version = "0.1.0"
description = "Watermarking for Visual Foundation Models via expressive activations"
authors = [
  { name="Anna Chistyakova", email="a.chistyakova@ispras.ru" },
  { name="Mikhail	Pautov", email="mikhail.pautov@skoltech.ru" },
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "torch==2.7.1",
  "numpy==2.3.1",
  "torchvision==0.22.1",
  "torchmetrics==1.7.4",
  "pyaml==25.5.0",
  "tensorboard==2.19.0",
  "timm==1.0.16",
  "matplotlib==3.10.3",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"expressprint" = ["configs/**/*.yaml"]

[tool.black]
line-length = 120
extend-exclude = ""

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]